updated to coord v1.2 updated assembly and packing info

--- a/Coord/Coord.csproj
+++ b/Coord/Coord.csproj
@@ -6,6 +6,11 @@
     <Company>Daniel Stamer-Squair</Company>
     <SignAssembly>false</SignAssembly>
     <Copyright>Copyright © 2020 Daniel Stamer-Squair</Copyright>
+    <RootNamespace>Uaine.Coord</RootNamespace>
+    <AssemblyName>Uaine.Coord</AssemblyName>
+    <Version>1.2.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>A C# .NET standard project for co-ordinate classes with additional functions</Description>
   </PropertyGroup>
 
 </Project>
