--- a/ScreenScraper.nuspec
+++ b/ScreenScraper.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Uaine.ScreenScraper</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>Uaine.ScreenScraper</title>
     <authors>Daniel Stamer-Squair</authors>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -10,7 +10,7 @@
     <projectUrl>https://bitbucket.org/uaineteinestudio/screeninfo</projectUrl>
     <iconUrl>https://bitbucket.org/uaineteinestudio/screeninfo/raw/9c26211c80fedeeddf04d856a0acc7d23a2f5ac7/icon/icon.png</iconUrl>
     <description>A C# .NET framework project to get screen information (size and position) based on the monitor index in a Windows environment</description>
-    <releaseNotes>First NuGet release</releaseNotes>
+    <releaseNotes>Dependency fix</releaseNotes>
     <copyright>Copyright 2020 Daniel Stamer-Squair</copyright>
     <tags></tags>
   </metadata>
